--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:theme="@style/Theme.Jugeo_LoveLetter_Alba_Elena"
         tools:targetApi="31">
         <activity
+            android:name=".OpcionPrincipe"
+            android:exported="false" />
+        <activity
             android:name=".HasGanado"
             android:exported="false" />
         <activity
